Use byte-based storage for persistent bitmap